@startuml

'/*
' *  UCF COP3330 Fall 2021 Assignment 4 Solutions
' *  Copyright 2021 Jeanne Moore
' */


class Solution46 {
-FILEPATH: String
processor: ProcessList object
+main()
}

class ProcessList {
+findOccurrences(List<String> list): List<WordOccurrences>
+sortOccurrences(List<WordOccurrences> list): void
+printOccurrences(List<WordOccurrences> list): void
}

class ReadFromFile {
+readFromFile(String fileName): (List<String> list)
+convertList(String fileName): (List<String> list)
}

class WordOccurrences {
-word: String
-occurrences: int
+WordOccurrences(String word, int occurrences)
+addOccurrence(): void
+getOccurrence(): int
+getWord(): String
}

Solution46 --o ProcessList

ProcessList --o ReadFromFile

ProcessList --o WordOccurrences

@enduml